--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>quer argumentos ou lambida na pusy?</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sexo anal</title>
+</head>
+<body>
+    <h1>quer argumentos ou lambida na pussy?</h1>
+</body>
+</html>
